kubernetes/apps/prometheus/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus
spec:
  parentRefs:
    - name: internet
      namespace: kube-system
      sectionName: http
  hostnames:
    - grafana.wajeht.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
